--- a/app/src/main/res/layout/fragment_park_details.xml
+++ b/app/src/main/res/layout/fragment_park_details.xml
@@ -69,6 +69,17 @@
         android:paddingBottom="16dp"/>
 
     <TextView
+        android:id="@+id/tvDescriptionT"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="Description:"
+        android:textSize="16sp"
+        android:textColor="@color/black"
+        app:layout_constraintTop_toBottomOf="@+id/ivImage"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:paddingBottom="16dp"/>
+    <TextView
         android:id="@+id/tvDescription"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
