--- a/app/src/main/res/layout/fragment_park_details.xml
+++ b/app/src/main/res/layout/fragment_park_details.xml
@@ -75,7 +75,7 @@
         android:text="Description:"
         android:textSize="16sp"
         android:textColor="@color/black"
-        app:layout_constraintTop_toBottomOf="@+id/ivImage"
+        app:layout_constraintTop_toBottomOf="@+id/tvWebsite"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:paddingBottom="16dp"/>
@@ -86,33 +86,11 @@
         android:text="Product description goes here. This is where you can provide more details about the product, such as its features, benefits, and specifications."
         android:textSize="16sp"
         android:textColor="@color/black"
-        app:layout_constraintTop_toBottomOf="@+id/ivImage"
+        app:layout_constraintTop_toBottomOf="@+id/tvDescriptionT"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:paddingBottom="16dp"/>
 
-    <TextView
-        android:id="@+id/tvBrand"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="Brand: Some Brand"
-        android:textSize="18sp"
-        android:textColor="@color/purple_700"
-        app:layout_constraintTop_toBottomOf="@+id/tvDescription"
-        app:layout_constraintStart_toStartOf="parent"
-        android:paddingTop="16dp"
-        android:paddingBottom="8dp"/>
 
-    <TextView
-        android:id="@+id/tvPrice"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="Price: $9.99"
-        android:textSize="18sp"
-        android:textColor="@color/purple_700"
-        app:layout_constraintTop_toBottomOf="@+id/tvDescription"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:paddingTop="16dp"
-        android:paddingBottom="8dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
