--- a/app/src/main/res/layout/fragment_park_details.xml
+++ b/app/src/main/res/layout/fragment_park_details.xml
@@ -48,25 +48,25 @@
         android:id="@+id/tvAddress"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Address and Website:"
-        android:textSize="16sp"
+        android:paddingBottom="16dp"
+        android:text="Address"
         android:textColor="@color/black"
-        app:layout_constraintTop_toBottomOf="@+id/tvAddressWebsite"
-        app:layout_constraintStart_toStartOf="parent"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
-        android:paddingBottom="16dp"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvAddressWebsite" />
 
     <TextView
         android:id="@+id/tvWebsite"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Address and Website:"
-        android:textSize="16sp"
+        android:paddingBottom="16dp"
+        android:text="Website:"
         android:textColor="@color/black"
-        app:layout_constraintTop_toBottomOf="@+id/tvAddress"
-        app:layout_constraintStart_toStartOf="parent"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
-        android:paddingBottom="16dp"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvAddress" />
 
     <TextView
         android:id="@+id/tvDescriptionT"
