--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -1,6 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
-             android:id="@+id/nav_graph">
-
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/nav_graph"
+    app:startDestination="@id/parkDetailsFragment2">
+    <fragment
+        android:id="@+id/parkDetailsFragment2"
+        android:name="com.example.project_g05.ParkDetailsFragment"
+        android:label="fragment_park_details"
+        tools:layout="@layout/fragment_park_details" >
+        <action
+            android:id="@+id/action_parkDetailsFragment2_to_itineraryFragment2"
+            app:destination="@id/itineraryFragment2" />
+    </fragment>
+    <fragment
+        android:id="@+id/itineraryFragment2"
+        android:name="com.example.project_g05.ItineraryFragment"
+        android:label="fragment_itinerary"
+        tools:layout="@layout/fragment_itinerary" />
 </navigation>
