--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -1,6 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
-             xmlns:app="http://schemas.android.com/apk/res-auto"
-             android:id="@+id/nav_graph">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/nav_graph"
+    app:startDestination="@id/parkFragment">
 
+    <fragment
+        android:id="@+id/itineraryFragment"
+        android:name="com.example.project_g05.ItineraryFragment"
+        android:label="fragment_itinerary"
+        tools:layout="@layout/fragment_itinerary" >
+        <argument
+            android:name="selectedNationalPark"
+            app:argType="com.example.project_g05.models.NationalPark"
+            app:nullable="true" />
+    </fragment>
+    <fragment
+        android:id="@+id/parkDetailsFragment"
+        android:name="com.example.project_g05.ParkDetailsFragment"
+        android:label="fragment_park_details"
+        tools:layout="@layout/fragment_park_details" >
+        <action
+            android:id="@+id/action_parkDetailsFragment_to_itineraryFragment"
+            app:destination="@id/itineraryFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/parkFragment"
+        android:name="com.example.project_g05.ParkFragment"
+        android:label="fragment_park"
+        tools:layout="@layout/fragment_park" >
+        <action
+            android:id="@+id/action_parkFragment_to_parkDetailsFragment"
+            app:destination="@id/parkDetailsFragment" />
+    </fragment>
 </navigation>
