--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,18 +3,18 @@
              xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/parkDetailsFragment2">
+    app:startDestination="@id/parkDetailsFragment">
     <fragment
-        android:id="@+id/parkDetailsFragment2"
+        android:id="@+id/parkDetailsFragment"
         android:name="com.example.project_g05.ParkDetailsFragment"
         android:label="fragment_park_details"
         tools:layout="@layout/fragment_park_details" >
         <action
             android:id="@+id/action_parkDetailsFragment2_to_itineraryFragment2"
-            app:destination="@id/itineraryFragment2" />
+            app:destination="@id/itineraryFragment" />
     </fragment>
     <fragment
-        android:id="@+id/itineraryFragment2"
+        android:id="@+id/itineraryFragment"
         android:name="com.example.project_g05.ItineraryFragment"
         android:label="fragment_itinerary"
         tools:layout="@layout/fragment_itinerary" />
