--- a/app/src/main/res/layout/fragment_park_details.xml
+++ b/app/src/main/res/layout/fragment_park_details.xml
@@ -60,7 +60,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvAddressWebsite" />
 
-    <TextView
+    <WebView
         android:id="@+id/tvWebsite"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
