--- a/app/src/main/res/layout/fragment_park.xml
+++ b/app/src/main/res/layout/fragment_park.xml
@@ -1,30 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#F5F5F5">
+    android:padding="16dp">
 
     <TextView
-        android:id="@+id/MapList_Text_View"
-        android:layout_width="409dp"
-        android:layout_height="101dp"
-        android:padding="16dp"
-        android:text="Select Provience"
-        android:textColor="#333333"
-        android:textSize="30sp" />
+        android:id="@+id/chooseState"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Please choose a state"
+        app:layout_constraintBottom_toTopOf="@+id/spinner"
+        app:layout_constraintEnd_toEndOf="@+id/spinner"
+        app:layout_constraintStart_toStartOf="@+id/spinner" />
 
     <Spinner
-        android:id="@+id/MapCategorySpinner"
+        android:id="@+id/spinner"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:background="#FFB1AC"
-        app:layout_constraintTop_toBottomOf="@+id/MapList_Text_View"
-        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginBottom="16dp"
+        android:entries="@array/states"
+        app:layout_constraintBottom_toTopOf="@+id/findParksButton"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintWidth_percent="0.0"
-        android:padding="16dp" />
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/findParksButton"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="FIND PARKS"
+        app:layout_constraintBottom_toTopOf="@+id/guideline"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
