--- a/app/src/main/res/layout/fragment_edit_itinerary.xml
+++ b/app/src/main/res/layout/fragment_edit_itinerary.xml
@@ -3,14 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ItineraryFragment">
+    tools:context=".EditItineraryFragment">
 
     <!-- TODO: Update blank fragment layout -->
-
-
-    <ListView
-        android:id="@+id/lvItinerary"
+    <TextView
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:text="@string/hello_blank_fragment" />
 
 </FrameLayout>
