--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,7 +3,15 @@
              xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/parkFragment">
+    app:startDestination="@id/ParkFragmentarkFragment">
+    <fragment
+        android:id="@+id/ParkFragmentarkFragment"
+        android:name="com.example.project_g05.ParkFragment"
+        android:label="ParkFragment" >
+        <action
+            android:id="@+id/action_parkFragment_to_parkDetailsFragment"
+            app:destination="@id/parkDetailsFragment" />
+    </fragment>
     <fragment
         android:id="@+id/parkDetailsFragment"
         android:name="com.example.project_g05.ParkDetailsFragment"
@@ -32,14 +40,7 @@
             android:name="parkAddress"
             app:argType="string" />
     </fragment>
-    <fragment
-        android:id="@+id/parkFragment"
-        android:name="com.example.project_g05.ParkFragment"
-        android:label="ParkFragment" >
-        <action
-            android:id="@+id/action_parkFragment_to_parkDetailsFragment"
-            app:destination="@id/parkDetailsFragment" />
-    </fragment>
+
     <fragment
         android:id="@+id/editItineraryFragment"
         android:name="com.example.project_g05.EditItineraryFragment"
