--- a/app/src/main/res/layout/fragment_itinerary.xml
+++ b/app/src/main/res/layout/fragment_itinerary.xml
@@ -5,12 +5,9 @@
     android:layout_height="match_parent"
     tools:context=".ItineraryFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-
-
-    <ListView
-        android:id="@+id/lvItinerary"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvItinerary"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-
+        android:layout_height="match_parent"
+        android:scrollbars="vertical" />
 </FrameLayout>
