--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,9 +3,9 @@
              xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/ParkFragmentarkFragment">
+    app:startDestination="@id/ParkFragment">
     <fragment
-        android:id="@+id/ParkFragmentarkFragment"
+        android:id="@+id/ParkFragment"
         android:name="com.example.project_g05.ParkFragment"
         android:label="ParkFragment" >
         <action
