--- a/app/src/main/res/layout/fragment_itinerary.xml
+++ b/app/src/main/res/layout/fragment_itinerary.xml
@@ -5,9 +5,15 @@
     android:layout_height="match_parent"
     tools:context=".ItineraryFragment">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rvItinerary"
+<!--    <androidx.recyclerview.widget.RecyclerView-->
+<!--        android:id="@+id/rvItinerary"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent"-->
+<!--        android:scrollbars="vertical" />-->
+
+
+    <ListView
+        android:id="@+id/lvItinerary"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:scrollbars="vertical" />
+        android:layout_height="match_parent" />
 </FrameLayout>
