--- a/app/src/main/res/layout/fragment_park.xml
+++ b/app/src/main/res/layout/fragment_park.xml
@@ -36,7 +36,7 @@
         android:layout_marginTop="16dp" />
 
     <com.google.android.gms.maps.MapView
-        android:id="@+id/mapFragment"
+        android:id="@+id/mapView"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintTop_toBottomOf="@+id/findParksButton"
