--- a/app/src/main/res/layout/fragment_edit_itinerary.xml
+++ b/app/src/main/res/layout/fragment_edit_itinerary.xml
@@ -75,5 +75,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/etNOtes" />
 
+    <Button
+        android:id="@+id/btnDelete"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingBottom="16dp"
+        android:text="Delete"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnSave" />
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
