--- a/app/src/main/res/layout/fragment_edit_itinerary.xml
+++ b/app/src/main/res/layout/fragment_edit_itinerary.xml
@@ -83,7 +83,8 @@
         android:text="Delete"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnSave" />
+        app:layout_constraintTop_toBottomOf="@+id/btnSave"
+        android:backgroundTint="#ff0000"/>
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
